test : 지원서 보관함 조회 테스트 작성, 도메인 테스트 작성