@@ -3,6 +3,7 @@ package com.kusitms.wannafly.applicationfolder.service;
 import com.kusitms.wannafly.applicationfolder.domain.ApplicationFolder;
 import com.kusitms.wannafly.applicationfolder.domain.ApplicationFolderRepository;
 import com.kusitms.wannafly.applicationfolder.dto.ApplicationFolderCreateRequest;
+import com.kusitms.wannafly.applicationfolder.dto.ApplicationFolderCreateResponse;
 import com.kusitms.wannafly.auth.LoginMember;
 import com.kusitms.wannafly.exception.BusinessException;
 import com.kusitms.wannafly.exception.ErrorCode;
@@ -11,7 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -29,18 +29,10 @@ public class ApplicationFolderService {
         return applicationFolder.getId();
     }
 
-    public List<Map<String, Integer>> extractYearsByMemberId(List<ApplicationFolder> folders, Long memberId) {
-        List<Map<String, Integer>> result = new ArrayList<>();
-        List<Integer> years = folders.stream()
-                .filter(folder -> folder.getMemberId().equals(memberId))
-                .map(ApplicationFolder::getYear)
-                .sorted(Comparator.reverseOrder())
-                .collect(Collectors.toList());
-        for (Integer year : years) {
-            Map<String, Integer> map = new HashMap<>();
-            map.put("year", year);
-            result.add(map);
-        }
-        return result;
+    public List<ApplicationFolderCreateResponse> extractYearsByMemberId(Long memberId) {
+        return applicationFolderRepository.findAllByMemberIdOrderByYearDesc(memberId)
+                .stream()
+                .map(folder -> new ApplicationFolderCreateResponse(folder.getYear()))
+                .toList();
     }
 }
